# obsidian-openai-querytool

./: .gitignore  LICENSE  README.md  pyproject.toml
obsidian_openai_querytool/: llm.py  main.py  models.py  openai.py
